--- a/src/zuulFramework/worldofzuul/gui/sample.fxml
+++ b/src/zuulFramework/worldofzuul/gui/sample.fxml
@@ -24,7 +24,7 @@
                                         <StackPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0"/>
                                         <StackPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                                             <children>
-                                                <TextArea prefHeight="200.0" prefWidth="200.0"/>
+                                                <TextArea editable="false" prefHeight="200.0" prefWidth="200.0"/>
                                             </children>
                                         </StackPane>
                                     </items>
@@ -35,7 +35,14 @@
                             <children>
                                 <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
                                     <children>
-                                        <Label maxWidth="1.7976931348623157E308" text="945 SEK" textAlignment="RIGHT"/>
+                                        <BorderPane>
+                                            <left>
+                                                <Label maxWidth="1.7976931348623157E308" text="12:350"/>
+                                            </left>
+                                            <right>
+                                                <Label maxWidth="1.7976931348623157E308" text="945 SEK"/>
+                                            </right>
+                                        </BorderPane>
                                         <Label text="Health"/>
                                         <ProgressBar maxWidth="1.7976931348623157E308" progress="0.0"/>
                                         <Label text="Weight"/>
@@ -117,10 +124,13 @@
                                                     </children>
                                                 </GridPane>
                                             </right>
+                                            <VBox.margin>
+                                                <Insets top="7.0"/>
+                                            </VBox.margin>
                                         </BorderPane>
                                     </children>
                                     <StackPane.margin>
-                                        <Insets left="15.0"/>
+                                        <Insets bottom="15.0" left="15.0" right="15.0" top="8.0"/>
                                     </StackPane.margin>
                                 </VBox>
                             </children>
