--- a/src/zuulFramework/worldofzuul/gui/sample.fxml
+++ b/src/zuulFramework/worldofzuul/gui/sample.fxml
@@ -26,6 +26,8 @@
                                         <StackPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                                             <children>
                                                 <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" />
+                                    <TextArea editable="false" layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0" />
+                                    <TextArea fx:id="textArea" editable="false" layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0" />
                                             </children>
                                         </StackPane>
                                     </items>
@@ -71,9 +73,9 @@
                                             <left>
                                                 <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="30.0" BorderPane.alignment="CENTER">
                                                     <children>
-                                                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Pay" />
-                                                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Ask" />
-                                                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Help">
+                                                        <Button fx:id="actionButtonPay" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleActionButtons" text="Pay" />
+                                                        <Button fx:id="actionButtonAsk" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleActionButtons" text="Ask" />
+                                                        <Button fx:id="actionButtonHelp" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleActionButtons" text="Help">
                                                             <VBox.margin>
                                                                 <Insets />
                                                             </VBox.margin>
