--- a/src/zuulFramework/worldofzuul/gui/sample.fxml
+++ b/src/zuulFramework/worldofzuul/gui/sample.fxml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.effect.*?>
-<?import java.lang.*?>
 <?import javafx.geometry.*?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.effect.Glow?>
+<?import javafx.scene.Group?>
 <?import javafx.scene.layout.*?>
-
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="zuulFramework.worldofzuul.gui.Controller">
+<GridPane xmlns:fx="http://javafx.com/fxml/1" alignment="center" hgap="10" vgap="10"
+          xmlns="http://javafx.com/javafx/8.0.102" fx:controller="zuulFramework.worldofzuul.gui.Controller">
     <columnConstraints>
-        <ColumnConstraints />
+        <ColumnConstraints/>
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints />
+        <RowConstraints/>
     </rowConstraints>
     <children>
         <StackPane prefHeight="845.0" prefWidth="1393.0">
@@ -21,12 +21,22 @@
                     <items>
                         <StackPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                             <children>
-                                <SplitPane dividerPositions="0.7169069462647444" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
+                                <SplitPane dividerPositions="0.7169069462647444" orientation="VERTICAL"
+                                           prefHeight="200.0" prefWidth="160.0">
                                     <items>
-                                        <StackPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" />
                                         <StackPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                                             <children>
-                                                <TextArea fx:id="textArea" editable="false" prefHeight="200.0" prefWidth="200.0" />
+                                                <Group>
+                                                    <Pane fx:id="mapPane" minHeight="0.0" minWidth="0.0"
+                                                          prefHeight="0.0"
+                                                          prefWidth="0.0"/>
+                                                </Group>
+                                            </children>
+                                        </StackPane>
+                                        <StackPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                                            <children>
+                                                <TextArea fx:id="textArea" editable="false" prefHeight="200.0"
+                                                          prefWidth="200.0"/>
                                             </children>
                                         </StackPane>
                                     </items>
