--- a/src/zuulFramework/worldofzuul/gui/sample.fxml
+++ b/src/zuulFramework/worldofzuul/gui/sample.fxml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.effect.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.effect.Glow?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.layout.*?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" alignment="center" hgap="10" vgap="10"
-          xmlns="http://javafx.com/javafx/8.0.102" fx:controller="zuulFramework.worldofzuul.gui.Controller">
+
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="zuulFramework.worldofzuul.gui.Controller">
     <columnConstraints>
-        <ColumnConstraints/>
+        <ColumnConstraints />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints/>
+        <RowConstraints />
     </rowConstraints>
     <children>
         <StackPane prefHeight="845.0" prefWidth="1393.0">
@@ -21,22 +24,20 @@
                     <items>
                         <StackPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                             <children>
-                                <SplitPane dividerPositions="0.7169069462647444" orientation="VERTICAL"
-                                           prefHeight="200.0" prefWidth="160.0">
+                                <SplitPane dividerPositions="0.7169069462647444" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
                                     <items>
                                         <StackPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                                             <children>
                                                 <Group>
-                                                    <Pane fx:id="mapPane" minHeight="0.0" minWidth="0.0"
-                                                          prefHeight="0.0"
-                                                          prefWidth="0.0"/>
+                                                   <children>
+                                                       <Pane fx:id="mapPane" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="0.0" />
+                                                   </children>
                                                 </Group>
                                             </children>
                                         </StackPane>
                                         <StackPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                                             <children>
-                                                <TextArea fx:id="textArea" editable="false" prefHeight="200.0"
-                                                          prefWidth="200.0"/>
+                                                <TextArea fx:id="textArea" editable="false" prefHeight="200.0" prefWidth="200.0" />
                                             </children>
                                         </StackPane>
                                     </items>
@@ -74,22 +75,22 @@
                                     </ColorAdjust>
                                  </effect></ProgressBar>
                                         <Label text="Inventory" />
-                                        <TableView prefHeight="200.0" prefWidth="200.0">
+                                        <TableView fx:id="tableViewPlayerInventory" onMouseClicked="#handleRowSelect" prefHeight="200.0" prefWidth="200.0">
                                             <columns>
-                                                <TableColumn prefWidth="75.0" text="Name" />
-                                                <TableColumn prefWidth="75.0" text="Weight" />
-                                                <TableColumn prefWidth="75.0" text="Price" />
+                                                <TableColumn fx:id="tableColumnPlayerInventoryName" prefWidth="75.0" text="Name" />
+                                                <TableColumn fx:id="tableColumnPlayerInventoryWeight" prefWidth="75.0" text="Weight" />
+                                                <TableColumn fx:id="tableColumnPlayerInventoryPrice" prefWidth="75.0" text="Price" />
                                             </columns>
                                             <VBox.margin>
                                                 <Insets />
                                             </VBox.margin>
                                         </TableView>
                                         <Label text="Room inventory" />
-                                        <TableView prefHeight="200.0" prefWidth="200.0">
+                                        <TableView fx:id="tableViewRoomInventory" onMouseClicked="#handleRowSelect" prefHeight="200.0" prefWidth="200.0">
                                             <columns>
-                                                <TableColumn prefWidth="75.0" text="Name" />
-                                                <TableColumn prefWidth="75.0" text="Weight" />
-                                                <TableColumn prefWidth="75.0" text="Price" />
+                                                <TableColumn fx:id="tableColumnRoomInventoryName" prefWidth="75.0" text="Name" />
+                                                <TableColumn fx:id="tableColumnRoomInventoryWeight" prefWidth="75.0" text="Weight" />
+                                                <TableColumn fx:id="tableColumnRoomInventoryPrice" prefWidth="75.0" text="Price" />
                                             </columns>
                                         </TableView>
                                         <BorderPane prefHeight="200.0" prefWidth="200.0">
