--- a/src/zuulFramework/worldofzuul/gui/sample.fxml
+++ b/src/zuulFramework/worldofzuul/gui/sample.fxml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.effect.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.effect.Glow?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.layout.*?>
-
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="zuulFramework.worldofzuul.gui.Controller">
+<GridPane xmlns:fx="http://javafx.com/fxml/1" alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8"
+          fx:controller="zuulFramework.worldofzuul.gui.Controller">
     <columnConstraints>
         <ColumnConstraints />
     </columnConstraints>
@@ -76,6 +73,9 @@
                                  </effect></ProgressBar>
                                         <Label text="Inventory" />
                                         <TableView fx:id="tableViewPlayerInventory" onMouseClicked="#handleRowSelect" prefHeight="200.0" prefWidth="200.0">
+                                            <columnResizePolicy>
+                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                                            </columnResizePolicy>
                                             <columns>
                                                 <TableColumn fx:id="tableColumnPlayerInventoryName" prefWidth="75.0" text="Name" />
                                                 <TableColumn fx:id="tableColumnPlayerInventoryWeight" prefWidth="75.0" text="Weight" />
@@ -87,6 +87,9 @@
                                         </TableView>
                                         <Label text="Room inventory" />
                                         <TableView fx:id="tableViewRoomInventory" onMouseClicked="#handleRowSelect" prefHeight="200.0" prefWidth="200.0">
+                                            <columnResizePolicy>
+                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                                            </columnResizePolicy>
                                             <columns>
                                                 <TableColumn fx:id="tableColumnRoomInventoryName" prefWidth="75.0" text="Name" />
                                                 <TableColumn fx:id="tableColumnRoomInventoryWeight" prefWidth="75.0" text="Weight" />
