--- a/src/zuulFramework/worldofzuul/gui/sample.fxml
+++ b/src/zuulFramework/worldofzuul/gui/sample.fxml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.effect.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.effect.Glow?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.layout.*?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8"
-          fx:controller="zuulFramework.worldofzuul.gui.Controller">
+
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="zuulFramework.worldofzuul.gui.Controller">
     <columnConstraints>
         <ColumnConstraints />
     </columnConstraints>
@@ -72,9 +75,9 @@
                                     </ColorAdjust>
                                  </effect></ProgressBar>
                                         <Label text="Inventory" />
-                                        <TableView fx:id="tableViewPlayerInventory" onMouseClicked="#handleRowSelect" prefHeight="200.0" prefWidth="200.0">
+                                        <TableView fx:id="tableViewPlayerInventory" onMouseClicked="#onPlayerItemDrop" prefHeight="200.0" prefWidth="200.0">
                                             <columnResizePolicy>
-                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                             </columnResizePolicy>
                                             <columns>
                                                 <TableColumn fx:id="tableColumnPlayerInventoryName" prefWidth="75.0" text="Name" />
@@ -86,9 +89,9 @@
                                             </VBox.margin>
                                         </TableView>
                                         <Label text="Room inventory" />
-                                        <TableView fx:id="tableViewRoomInventory" onMouseClicked="#handleRowSelect" prefHeight="200.0" prefWidth="200.0">
+                                        <TableView fx:id="tableViewRoomInventory" onMouseClicked="#onRoomItemPickup" prefHeight="200.0" prefWidth="200.0">
                                             <columnResizePolicy>
-                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                             </columnResizePolicy>
                                             <columns>
                                                 <TableColumn fx:id="tableColumnRoomInventoryName" prefWidth="75.0" text="Name" />
@@ -102,9 +105,9 @@
                                        <children>
                                                       <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="30.0" BorderPane.alignment="CENTER">
                                                           <children>
-                                                              <Button fx:id="actionButtonPay" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleActionButtons" prefHeight="27.0" prefWidth="90.0" text="Pay" />
-                                                <ComboBox fx:id="comboBoxAsk" onAction="#handleActionButtons" prefWidth="90.0" promptText="Ask" />
-                                                              <Button fx:id="actionButtonHelp" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleActionButtons" text="Help">
+                                                              <Button fx:id="actionButtonPay" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onPayButtonClick" prefHeight="27.0" prefWidth="90.0" text="Pay" />
+                                                <ComboBox fx:id="comboBoxAsk" onAction="#onAskComboBoxSelect" prefWidth="90.0" promptText="Ask" />
+                                                              <Button fx:id="actionButtonHelp" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onHelpButtonClick" text="Help">
                                                                   <VBox.margin>
                                                                       <Insets />
                                                                   </VBox.margin>
