--- a/src/zuulFramework/worldofzuul/gui/sample.fxml
+++ b/src/zuulFramework/worldofzuul/gui/sample.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import javafx.scene.*?>
@@ -109,6 +110,7 @@
                                                                 <Insets />
                                                             </VBox.margin>
                                                         </Button>
+                                          <Button fx:id="actionButtonQuit" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onQuitButtonClick" text="Quit" />
                                                     </children>
                                                 </VBox>
                                             </children>
@@ -191,5 +193,52 @@
                 </BorderPane>
             </right>
         </BorderPane>
+      <BorderPane fx:id="quitPane" prefHeight="200.0" prefWidth="200.0" visible="false">
+         <top>
+            <TextField fx:id="quitText" alignment="CENTER" editable="false" prefHeight="300.0" promptText="GAME OVER!" BorderPane.alignment="CENTER">
+               <font>
+                  <Font size="96.0" />
+               </font>
+            </TextField>
+         </top>
+         <right>
+            <VBox alignment="CENTER" prefHeight="600.0" prefWidth="540.0" spacing="8.0" BorderPane.alignment="CENTER_LEFT">
+               <children>
+                  <Label text="Highscores">
+                     <font>
+                        <Font name="Comic Sans MS Italic" size="32.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets right="100.0" />
+                     </VBox.margin>
+                  </Label>
+                  <ListView fx:id="quitHighScoreList" prefHeight="547.0" prefWidth="533.0">
+                     <VBox.margin>
+                        <Insets bottom="50.0" right="100.0" />
+                     </VBox.margin>
+                  </ListView>
+               </children>
+               <BorderPane.margin>
+                  <Insets top="10.0" />
+               </BorderPane.margin>
+            </VBox>
+         </right>
+         <center>
+            <VBox alignment="CENTER" spacing="20.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label text="Your score is:">
+                     <font>
+                        <Font name="Comic Sans MS Bold Italic" size="71.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="scoreLabel" text="1337">
+                     <font>
+                        <Font size="55.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
+         </center>
+      </BorderPane>
     </children>
 </StackPane>
