--- a/src/zuulFramework/worldofzuul/gui/sample.fxml
+++ b/src/zuulFramework/worldofzuul/gui/sample.fxml
@@ -212,7 +212,7 @@
                   </ListView>
                </children>
                <BorderPane.margin>
-                  <Insets top="30.0" />
+                  <Insets top="50.0" />
                </BorderPane.margin>
             </VBox>
          </right>
@@ -231,19 +231,28 @@
                   </Label>
                </children>
                <BorderPane.margin>
-                  <Insets top="100.0" />
+                  <Insets top="120.0" />
                </BorderPane.margin>
             </VBox>
          </center>
          <top>
-            <Label fx:id="quitText" text="GAME OVER!" BorderPane.alignment="CENTER">
-               <font>
-                  <Font name="Comic Sans MS Bold" size="90.0" />
-               </font>
-               <BorderPane.margin>
-                  <Insets top="75.0" />
-               </BorderPane.margin>
-            </Label>
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label fx:id="quitText" text="GAME OVER!">
+                     <font>
+                        <Font name="Comic Sans MS Bold" size="90.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="30.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Label fx:id="gameOverMessage" textAlignment="CENTER">
+                     <font>
+                        <Font name="Comic Sans MS" size="16.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
          </top>
       </BorderPane>
     </children>
