Highscore added to start and end page

--- a/src/zuulFramework/worldofzuul/gui/sample.fxml
+++ b/src/zuulFramework/worldofzuul/gui/sample.fxml
@@ -189,7 +189,7 @@
                         <Label text="Highscores" BorderPane.alignment="CENTER" />
                     </top>
                     <center>
-                        <ListView fx:id="highscoresList" BorderPane.alignment="CENTER" />
+                        <ListView fx:id="highScoreList" BorderPane.alignment="CENTER" />
                     </center>
                 </BorderPane>
             </right>
